--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .container {
   max-width: 768px;
   margin: auto;
@@ -197,6 +202,7 @@ input:focus {
 .about-link a {
   color: #fff;
   cursor: pointer;
+  font-size: 30px;
 }
 
 .about-link a:hover {
